Fixed button size on small screens.

--- a/fediverse-share-button/src/styles/styles.scss
+++ b/fediverse-share-button/src/styles/styles.scss
@@ -98,6 +98,7 @@ button.fsb-button {
   color: #000;
   line-height: 1em;
   margin: 0;
+  min-width: 6rem;
   display: inline-block;
   padding: 6px 12px;
   text-align: center;
